staging/src/slime.io/slime/modules/meshregistry/pkg/source/eureka/testdata/project_code.expected.yaml
---
kind: ServiceEntry
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: applicationa.nsf.project1.eureka
  namespace: eureka
  labels:
    registry: eureka
  annotations: {}
spec:
  hosts:
    - applicationa.nsf.project1.eureka
  ports:
    - number: 80
      protocol: HTTP
      name: http-80
  resolution: STATIC
  endpoints:
    - address: 192.168.2.10
      ports:
        http-80: 8000
      labels:
        projectCode: project1
        version: 2.1.0
        zone: eu-west-1a
---
kind: ServiceEntry
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: applicationa.nsf.project2.eureka
  namespace: eureka
  labels:
    registry: eureka
  annotations: {}
spec:
  hosts:
    - applicationa.nsf.project2.eureka
  ports:
    - number: 80
      protocol: HTTP
      name: http-80
  resolution: STATIC
  endpoints:
    - address: 192.168.2.11
      ports:
        http-80: 8001
      labels:
        projectCode: project2
        version: 2.1.0
        zone: eu-west-1b
---
kind: ServiceEntry
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: applicationb.nsf.project3.eureka
  namespace: eureka
  labels:
    registry: eureka
  annotations: {}
spec:
  hosts:
    - applicationb.nsf.project3.eureka
  ports:
    - number: 80
      protocol: HTTP
      name: http-80
  resolution: STATIC
  endpoints:
    - address: 192.168.3.10
      ports:
        http-80: 9000
      labels:
        projectCode: project3
        version: 1.2.0
        zone: ap-southeast-1a
